tests/err07.json.err
Parse error at line 2

001: {
002: 	"a": a
     	     ^
Expected object, array, number or string
